name:                concur-react-examples
version:             0.1.0.0
synopsis:            Examples for Concur-React
description:         Examples for Concur-React
homepage:            https://github.com/concurhaskell/concur-react-examples
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.org
copyright:           2017 Anupam Jain
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hello
  ghc-options:         -Wall -ferror-spans
  js-sources:          jsbits/index.compiled.js
  hs-source-dirs:      src
  main-is:             Hello.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm >= 2.4
                     , mtl >= 2.2
                     , free >= 4.12
                     , transformers >= 0.5
                     , concur-core
                     , concur-react

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010

executable pipes
  ghc-options:         -Wall -ferror-spans
  js-sources:          jsbits/index.compiled.js
  hs-source-dirs:      src
  main-is:             PipeWidgets.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm >= 2.4
                     , mtl >= 2.2
                     , free >= 4.12
                     , transformers >= 0.5
                     , concur-core
                     , concur-react

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      ghcjs-base-stub >= 0.1

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/concurhaskell/concur-react-examples
